# MoonVerb

./: CMakeLists.txt  build_mac.sh
.github/workflows/: build.yml
Installer/: MoonVerb_Setup.iss
Source/: MoonVerbLookAndFeel.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  Presets.h  ShimmerReverb.h
